# polynomial

./: CMakeLists.txt  Double_Field_Info.c  Field_Info.h  Int_Field_Info.c  algebra.h  double_FieldInfo.c  double_fielf_info.c  int_FieldInfo.c  int_field_info.c  main.c  poly.c  poly.h  poly_test.c  poly_test.h  scalars.c  scalars.h
